--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,21 @@
   position: relative;
   text-align: center;
   background: url(https://picsum.photos/2000/1500);
-  color: #333;
+  color: white;
   background-blend-mode: color-burn;
   background-size: cover;
+}
+
+.inner-header {
+  height: 90px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.bg-box {
+  width: 80%;
+  margin: auto;
+  background-color: rgba(51, 51, 51, 0.5);
+  border-radius: 10%;
 }
